--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,4 @@ jobs:
     - name: Build with Maven
       run: |
          echo running second job1 with set up JDK 11
-         mvn -B package --file pom.xml
+         run: mvn --batch-mode --update-snapshots verify
