--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
+        java-version: 8
     - name: Build with Maven
       run: |
          echo running second job1 with set up JDK 11
-         run: mvn --batch-mode --update-snapshots verify
+         
