--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+  schedule:
+    - cron:  '*/2 * * * *'    # At every 15th minute
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
