--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,10 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   schedule:
-    - cron:  '*/2 * * * *'    # At every 15th minute
+    - cron:  '*/2 * * * *'    # At every 2nd minute
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
