--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ on:
   schedule:
     - cron:  '*/2 * * * *'    # At every 2nd minute
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
