--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-     - cron:  '*/2 * * * *'    # At every 2nd minute
+    - cron:  '*/5 * * * *'    # At every 2nd minute
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -42,11 +42,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        java-version: 8
     - name: Build with Maven
       run: |
-         echo running second job1 with set up JDK 11
+         echo running second job1 with mvn install
+         mvn clean install
          
