--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron:  '*/5 * * * *'    # At every 2nd minute
+    - cron:  '*/15 * * * *'    # At every 2nd minute
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -45,5 +45,5 @@ jobs:
     - name: Build with Maven
       run: |
          echo running second job1 with mvn install
-         mvn clean install
+         #mvn clean install
          
