updated file for s3 upload file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,17 +36,12 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           
-  job1:
+  S3-upload:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        java-version: 8
-    - name: Build with Maven
-      run: |
-         echo running second job1 with set up JDK 11
+    - name: Release to S3
+      run: scripts/aws-test.sh ${{secrets.AWS_ACCESS_KEY}} ${{secrets.AWS_SECRET_ACCESS}} ${{secrets.AWS_BUCKET}}
          
