--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron:  '*/15 * * * *'    # At every 2nd minute
+  #schedule:
+   # - cron:  '*/15 * * * *'    # At every 2nd minute
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
