--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,12 +47,14 @@ jobs:
         mkdir release
         zip -r lambda.zip ./python
         ls -lrt
-          
+    - name: Release to S3
+      run: ././scripts/aws-test.sh ${{secrets.AWS_ACCESS_KEY}} ${{secrets.AWS_SECRET_ACCESS}} ${{secrets.AWS_BUCKET}}
+
   S3-upload:
     needs: zip-file
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Release to S3
-      run: ././scripts/aws-test.sh ${{secrets.AWS_ACCESS_KEY}} ${{secrets.AWS_SECRET_ACCESS}} ${{secrets.AWS_BUCKET}}
+#     - name: Release to S3
+#       run: ././scripts/aws-test.sh ${{secrets.AWS_ACCESS_KEY}} ${{secrets.AWS_SECRET_ACCESS}} ${{secrets.AWS_BUCKET}}
