yml file updated

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
   #   needs: build
   #   runs-on: ubuntu-latest
   check:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Create zip folder
