--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
       run: |
         ls -lrt
 
