--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,8 +60,8 @@ jobs:
 
     steps:
     # Checkout the repository to the GitHub Actions runner
+    - uses: actions/checkout@v3
     - name: Checkout
-      uses: actions/checkout@v3
       run: |
           ls -lrt
 
