--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,8 +62,6 @@ jobs:
     # Checkout the repository to the GitHub Actions runner
     - uses: actions/checkout@v3
     - name: Checkout
-      run: |
-          ls -lrt
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -71,16 +69,17 @@ jobs:
       with:
         terraform_version: 0.12.24
 
-  #   # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-  #   - name: Terraform Init
-  #     id: init
-  #     env:
-  #       AWS_REGION: 'us-east-1'
-  #       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     run: |
-  #       terraform --version 
-  #       terraform init -input=false
+     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      id: init
+      env:
+        AWS_REGION: 'us-east-1'
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        ls -lrt
+        terraform --version 
+        terraform init -input=false
 
   #   # Checks that all Terraform configuration files adhere to a canonical format
   #   - name: Terraform Format
