--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,10 +64,10 @@ jobs:
     - name: Checkout
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-    - uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 0.12.24
+    # - name: Setup Terraform
+    # - uses: hashicorp/setup-terraform@v1
+    #   with:
+    #     terraform_version: 0.12.24
 
      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     # - name: Terraform Init
