--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,22 +64,22 @@ jobs:
       uses: actions/checkout@v3
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    # - name: Setup Terraform
-    # - uses: hashicorp/setup-terraform@v1
-    #   with:
-    #     terraform_version: 0.12.24
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 0.12.24
 
      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    # - name: Terraform Init
-    #   id: init
-    #   env:
-    #     AWS_REGION: 'us-east-1'
-    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #   run: |
-    #     ls -lrt
-    #     terraform --version 
-    #     terraform init -input=false
+    - name: Terraform Init
+      id: init
+      env:
+        AWS_REGION: 'us-east-1'
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        ls -lrt
+        terraform --version 
+        terraform init -input=false
 
   #   # Checks that all Terraform configuration files adhere to a canonical format
   #   - name: Terraform Format
